# Haskell-Algorithm-Example

./: .gitignore  CHANGELOG.md  Haskell-Algorithm-Example.cabal  stack.yaml
src/Dynamic/: Factorial.hs  Fibonacci.hs  FizzBuzz.hs
src/Ordering/: BubbleSort.hs  QuickSort.hs  SelectionSort.hs
test/: Tests.hs
