cabal-version:       2.2

name:                Haskell-Algorithm-Example
description:         Example package for testing
version:             0.1.0.0

license-file:        LICENSE
author:              Brayan Martinez
maintainer:          brayanmartinez827@gmail.com

build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:     Dynamic.Factorial
                       Dynamic.Fibonacci
                       Dynamic.FizzBuzz
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite ExampleTests
 type:              exitcode-stdio-1.0
 hs-source-dirs:    test
 build-depends:     base
                  , tasty
                  , tasty-hunit
                  , Haskell-Algorithm-Example
 main-is:           Tests.hs
 default-language:  Haskell2010
